# derand

./: .gitignore  LICENSE  Makefile  README.md
corevdf/: CMakeLists.txt
corevdf/apps/: main.cpp
corevdf/include/: common.hpp
corevdf/include/classgroup/: form.hpp
corevdf/include/hash/: poseidon2.hpp  sha256.hpp
corevdf/include/vdf/: prover.hpp  system.hpp  verifier.hpp
corevdf/src/: common.cpp
corevdf/src/classgroup/: compose.cpp  form.cpp
corevdf/src/hash/: poseidon2.cpp  sha256.cpp
corevdf/src/vdf/: prover.cpp  system.cpp  verifier.cpp
corevdf/tests/: test_discriminant.cpp  test_form_reduction_nucomp.cpp  test_hash_sha256.cpp  test_hash_to_form.cpp  test_vdf.cpp
derand-cli/: go.mod  go.sum
derand-cli/backend/: pool.go
derand-cli/config/: config.go  config_chain.go  config_local_profile.go  config_wallet.go
derand-cli/profile/: local.go  local_standard_classgroup_zk_plonk_bn254.go  remote.go  system.go  template.go
derand-cli/proverlogic/: proof.go  prover.go  wg.go
derand-cli/sol/: compile.go  helper.go  model.go  predefined.go
derand-cli/utils/: currency.go  download.go  error.go  hash.go  print.go  read.go
scripts/: build.sh  build_zk.sh  extract_deployed_bytecode.sh  prove.sh  prove_zk.sh
solidity/: foundry.toml
solidity/src/: DeRand.sol  HashToPrime128.sol  VerifierWrapper.sol
solidity/test/: DeRand.t.sol  HashToPrime128.t.sol  VerifierWrapper.t.sol  Verifier_16_2.t.sol
zkvdf/: go.mod  go.sum
zkvdf/bigint/: bigint.go  bigint_abs.go  bigint_abs_test.go  bigint_add.go  bigint_add_test.go  bigint_api.go  bigint_cmp.go  bigint_cmp_test.go  bigint_convert.go  bigint_convert_test.go  bigint_gcd.go  (+19 more)
(+126 files in other folders)
